--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "styled-components": "^6.1.14",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
